helm/namespaces.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: prod
  labels:
    name: prod
---
kind: Namespace
apiVersion: v1
metadata:
  name: dev
  labels:
    name: dev
---
