helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rateme-nextgen-ingress-dev
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: gce
spec:
  ingressClassName: "gce"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: helm-ui-service
                port:
                  number: 80
          - path: /pois
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /pois/
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /rating/
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /rating
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /auth/user
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080

          - path: /user/
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080

          - path: /auth/register
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080

          - path: /auth/login
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080

          - path: /user/
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /actuator/health
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080

          - path: /swagger-ui/
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /v3/api-docs/
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
          - path: /v3/api-docs
            pathType: Prefix
            backend:
              service:
                name: helm-backend-service
                port:
                  number: 8080
