helm/myingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: prod-instance-address
    kubernetes.io/ingress.class: gce
spec:
  defaultBackend:
    service:
      name: mc-service
      port:
        number: 80
